--- a/FOAEA3.Business/FOAEA3.Business.csproj
+++ b/FOAEA3.Business/FOAEA3.Business.csproj
@@ -6,6 +6,7 @@
 		<RunAnalyzersDuringLiveAnalysis>true</RunAnalyzersDuringLiveAnalysis>
 		<Nullable>warnings</Nullable>
 		<Version>1.0.0-alpha</Version>
+    <ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
